# anud12.github.io_job_base

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
.github/workflows/: build-js.yml
lib/: index.d.ts  index.js  index.js.map
lib/api/db/: Table.d.ts  TableQuery.d.ts  TableQueryBuilder.d.ts  TableRow.d.ts
lib/api/file/: FileMetadata.d.ts  FileMetadataUninitialized.d.ts  FileQuery.d.ts  RequestList.type.d.ts  RequestOne.type.d.ts
lib/api/implementation/: GoogleSession.d.ts  fetchGoogle.d.ts
lib/api/implementation/drive/: GoogleDrive.d.ts  GoogleDriveFile.d.ts  GoogleDriveFileData.d.ts  GoogleDriveFileUninitialized.d.ts  prepareRequest.d.ts
lib/api/implementation/sheet/: GoogleSheet.d.ts  getColumns.d.ts  (+4 more)
src/: index.test.ts  index.ts  init.sh  lib.rs  printable.rs  test.ts
src/api/db/: Table.ts  TableQuery.ts  TableQueryBuilder.ts  TableRow.ts  mod.rs  table.rs  table_query.rs  table_query_builder.rs  table_row.rs
src/api/file/: FileMetadata.ts  FileMetadataUninitialized.ts  FileQuery.ts  RequestList.type.ts  RequestOne.type.ts  file_query.rs  folder_query.rs  metadata.rs  mod.rs  query.rs  request.rs  request_list.rs  request_one.rs
src/api/implementation/: GoogleSession.ts  fetchGoogle.ts
src/implementation/: google_drive.rs  google_drive_file.rs  google_session.rs  mod.rs
src/implementation/drive/: google_drive.rs  google_drive_file.rs  google_drive_query.rs  google_drive_query_one.rs  google_drive_request.rs  mod.rs
src/implementation/sheet/: get.rs  google_sheet_request.rs  mod.rs  parse_response.rs  save.rs  sheet.rs
(+15 files in other folders)
