[package]
name = "job_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8.3.0"
rsa = { version = "0.9.0", features = ["sha2"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
ureq = { version = "2.6.2", features = ["serde", "serde_json", "json"] }
url = "2.3.1"
env_logger = "0.9.0"
log = "0.4.16"
base64 = "0.21.2"